--- a/ContactListView/ContactListView/View/Cell/AddStoryCollectionViewCell.xib
+++ b/ContactListView/ContactListView/View/Cell/AddStoryCollectionViewCell.xib
@@ -1,67 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="AddStoryCollectionViewCell" customModule="ContactListView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="71" height="116"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="71" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N82-Jv-7Am">
-                        <rect key="frame" x="1" y="4" width="69" height="108"/>
+                        <rect key="frame" x="1" y="4" width="108" height="182"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="51Lzc4O-iuL" translatesAutoresizingMaskIntoConstraints="NO" id="cak-ZG-cgz">
-                                <rect key="frame" x="0.0" y="0.0" width="69" height="108"/>
+                                <rect key="frame" x="0.0" y="0.0" width="108" height="182"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vYf-Uy-QCQ">
+                                <rect key="frame" x="0.0" y="0.0" width="108" height="182"/>
+                                <color key="backgroundColor" white="0.1972923801369863" alpha="0.3827589897260274" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vET-2D-vGX">
-                                <rect key="frame" x="4" y="4" width="20" height="20"/>
+                                <rect key="frame" x="4" y="4" width="48" height="48"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="41gxXYRYp8L._AC_" translatesAutoresizingMaskIntoConstraints="NO" id="uaT-Zd-HBY">
-                                        <rect key="frame" x="1" y="1" width="18" height="18"/>
+                                        <rect key="frame" x="4" y="4" width="40" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="18" id="BTd-xA-hx3"/>
-                                            <constraint firstAttribute="height" constant="18" id="l9F-N7-Wl9"/>
+                                            <constraint firstAttribute="width" constant="40" id="BTd-xA-hx3"/>
+                                            <constraint firstAttribute="height" constant="40" id="l9F-N7-Wl9"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1306751072" green="0.52150911089999996" blue="0.96679383519999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="uaT-Zd-HBY" firstAttribute="centerX" secondItem="vET-2D-vGX" secondAttribute="centerX" id="KqS-fo-RZS"/>
-                                    <constraint firstAttribute="width" constant="20" id="aMs-tt-kvK"/>
-                                    <constraint firstAttribute="height" constant="20" id="sNx-JX-uhy"/>
+                                    <constraint firstAttribute="width" constant="48" id="aMs-tt-kvK"/>
+                                    <constraint firstAttribute="height" constant="48" id="sNx-JX-uhy"/>
                                     <constraint firstItem="uaT-Zd-HBY" firstAttribute="centerY" secondItem="vET-2D-vGX" secondAttribute="centerY" id="zLe-sR-X5j"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shy Sankabu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0H-Lc-cb3">
-                                <rect key="frame" x="4" y="94" width="41" height="10"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="7"/>
+                                <rect key="frame" x="4" y="161.5" width="75" height="16.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="k0H-Lc-cb3" secondAttribute="bottom" constant="4" id="71o-Bs-QND"/>
                             <constraint firstAttribute="trailing" secondItem="cak-ZG-cgz" secondAttribute="trailing" id="7jp-09-2To"/>
                             <constraint firstItem="cak-ZG-cgz" firstAttribute="leading" secondItem="N82-Jv-7Am" secondAttribute="leading" id="BZY-7m-8yV"/>
+                            <constraint firstItem="vYf-Uy-QCQ" firstAttribute="leading" secondItem="N82-Jv-7Am" secondAttribute="leading" id="D0u-Vz-8OE"/>
                             <constraint firstItem="cak-ZG-cgz" firstAttribute="top" secondItem="N82-Jv-7Am" secondAttribute="top" id="Iay-eh-2QY"/>
                             <constraint firstItem="vET-2D-vGX" firstAttribute="top" secondItem="N82-Jv-7Am" secondAttribute="top" constant="4" id="Vr5-zT-xir"/>
+                            <constraint firstAttribute="trailing" secondItem="vYf-Uy-QCQ" secondAttribute="trailing" id="Wa0-gX-sKo"/>
                             <constraint firstItem="k0H-Lc-cb3" firstAttribute="leading" secondItem="N82-Jv-7Am" secondAttribute="leading" constant="4" id="Ygu-nJ-a3s"/>
+                            <constraint firstAttribute="bottom" secondItem="vYf-Uy-QCQ" secondAttribute="bottom" id="h00-sv-8Lq"/>
+                            <constraint firstItem="vYf-Uy-QCQ" firstAttribute="top" secondItem="N82-Jv-7Am" secondAttribute="top" id="m74-y5-VaA"/>
                             <constraint firstAttribute="bottom" secondItem="cak-ZG-cgz" secondAttribute="bottom" id="ncF-tt-aW5"/>
                             <constraint firstItem="vET-2D-vGX" firstAttribute="leading" secondItem="N82-Jv-7Am" secondAttribute="leading" constant="4" id="rnl-Un-WH7"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="1" id="2I1-3J-aOS"/>
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="58h-f8-g3V"/>
@@ -69,7 +80,6 @@
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="S9V-3A-oKU"/>
                 <constraint firstAttribute="bottom" secondItem="N82-Jv-7Am" secondAttribute="bottom" constant="4" id="g1y-e0-v6e"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="57" height="95"/>
             <connections>
                 <outlet property="addStoryImage" destination="cak-ZG-cgz" id="wwg-XQ-ke5"/>
@@ -82,5 +92,8 @@
     <resources>
         <image name="41gxXYRYp8L._AC_" width="347" height="500"/>
         <image name="51Lzc4O-iuL" width="334" height="500"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
