--- a/ContactListView/ContactListView/View/Cell/CreateAStoryCollectionViewCell.xib
+++ b/ContactListView/ContactListView/View/Cell/CreateAStoryCollectionViewCell.xib
@@ -1,101 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="CreateAStoryCollectionViewCell" customModule="ContactListView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="71" height="116"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="71" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NFB-Xp-Kd0">
-                        <rect key="frame" x="1" y="4" width="69" height="108"/>
+                        <rect key="frame" x="1" y="4" width="108" height="182"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="51Lzc4O-iuL" translatesAutoresizingMaskIntoConstraints="NO" id="mva-Ih-Nid">
-                                <rect key="frame" x="0.0" y="0.0" width="69" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="108" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="TOg-Q8-qDL"/>
+                                    <constraint firstAttribute="height" constant="120" id="TOg-Q8-qDL"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRB-38-7qm">
-                                <rect key="frame" x="24.5" y="50" width="20" height="20"/>
+                                <rect key="frame" x="34" y="100" width="40" height="40"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="1b9-HX-3kF">
-                                        <rect key="frame" x="1" y="1.5" width="18" height="17"/>
+                                        <rect key="frame" x="0.0" y="0.5" width="40" height="39"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="18" id="3GC-gs-NsJ"/>
-                                            <constraint firstAttribute="width" constant="18" id="cww-Vo-DTz"/>
+                                            <constraint firstAttribute="height" constant="40" id="3GC-gs-NsJ"/>
+                                            <constraint firstAttribute="width" constant="40" id="cww-Vo-DTz"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="N65-UR-egZ"/>
+                                    <constraint firstAttribute="width" constant="40" id="N65-UR-egZ"/>
                                     <constraint firstItem="1b9-HX-3kF" firstAttribute="centerX" secondItem="NRB-38-7qm" secondAttribute="centerX" id="SPV-JF-ciZ"/>
-                                    <constraint firstAttribute="height" constant="20" id="apF-ht-uap"/>
+                                    <constraint firstAttribute="height" constant="40" id="apF-ht-uap"/>
                                     <constraint firstItem="1b9-HX-3kF" firstAttribute="centerY" secondItem="NRB-38-7qm" secondAttribute="centerY" id="bRR-9J-0Zl"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Create a" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTt-Aj-8mj">
-                                <rect key="frame" x="18" y="76" width="33" height="9"/>
-                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="8"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTt-Aj-8mj">
+                                <rect key="frame" x="27" y="146" width="54" height="15"/>
+                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Story" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Auo-PM-V6T">
-                                <rect key="frame" x="22" y="88" width="25" height="9"/>
-                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="8"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Story" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxZ-Ef-ENN">
+                                <rect key="frame" x="37.5" y="161" width="33" height="15"/>
+                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Auo-PM-V6T" secondAttribute="trailing" constant="22" id="4JR-Lf-xmi"/>
                             <constraint firstItem="mva-Ih-Nid" firstAttribute="top" secondItem="NFB-Xp-Kd0" secondAttribute="top" id="51m-zi-peF"/>
-                            <constraint firstItem="CTt-Aj-8mj" firstAttribute="centerX" secondItem="NFB-Xp-Kd0" secondAttribute="centerX" id="7ek-KU-xHd"/>
-                            <constraint firstAttribute="bottom" secondItem="Auo-PM-V6T" secondAttribute="bottom" constant="3" id="Dsx-5m-qDt"/>
+                            <constraint firstItem="CTt-Aj-8mj" firstAttribute="top" secondItem="NRB-38-7qm" secondAttribute="bottom" constant="6" id="C6r-D0-Pgi"/>
                             <constraint firstAttribute="trailing" secondItem="mva-Ih-Nid" secondAttribute="trailing" id="Ehh-54-AFA"/>
-                            <constraint firstItem="Auo-PM-V6T" firstAttribute="top" secondItem="CTt-Aj-8mj" secondAttribute="bottom" constant="3" id="FvL-jI-kLK"/>
-                            <constraint firstItem="Auo-PM-V6T" firstAttribute="centerX" secondItem="NFB-Xp-Kd0" secondAttribute="centerX" id="Kdz-RP-vI7"/>
-                            <constraint firstItem="CTt-Aj-8mj" firstAttribute="top" secondItem="NRB-38-7qm" secondAttribute="bottom" constant="6" id="OKk-5v-T3i"/>
-                            <constraint firstItem="Auo-PM-V6T" firstAttribute="leading" secondItem="NFB-Xp-Kd0" secondAttribute="leading" constant="22" id="Tu7-hB-FlZ"/>
                             <constraint firstItem="NRB-38-7qm" firstAttribute="centerX" secondItem="NFB-Xp-Kd0" secondAttribute="centerX" id="WSf-ab-gzV"/>
-                            <constraint firstItem="CTt-Aj-8mj" firstAttribute="leading" secondItem="NFB-Xp-Kd0" secondAttribute="leading" constant="18" id="idb-bW-Bad"/>
-                            <constraint firstAttribute="trailing" secondItem="CTt-Aj-8mj" secondAttribute="trailing" constant="18" id="uHB-CI-UFZ"/>
+                            <constraint firstAttribute="bottom" secondItem="bxZ-Ef-ENN" secondAttribute="bottom" constant="6" id="bEM-8w-1Ql"/>
+                            <constraint firstItem="bxZ-Ef-ENN" firstAttribute="top" secondItem="CTt-Aj-8mj" secondAttribute="bottom" id="doY-eb-iNm"/>
+                            <constraint firstItem="bxZ-Ef-ENN" firstAttribute="centerX" secondItem="NFB-Xp-Kd0" secondAttribute="centerX" id="iIb-B8-bQn"/>
+                            <constraint firstItem="CTt-Aj-8mj" firstAttribute="centerX" secondItem="NFB-Xp-Kd0" secondAttribute="centerX" id="mtW-wh-SHf"/>
+                            <constraint firstItem="NRB-38-7qm" firstAttribute="bottom" secondItem="mva-Ih-Nid" secondAttribute="bottom" constant="20" id="ocF-nN-R9a"/>
                             <constraint firstItem="mva-Ih-Nid" firstAttribute="leading" secondItem="NFB-Xp-Kd0" secondAttribute="leading" id="z0U-dw-opv"/>
-                            <constraint firstItem="NRB-38-7qm" firstAttribute="top" secondItem="NFB-Xp-Kd0" secondAttribute="top" constant="50" id="zqt-Mc-AWU"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="NFB-Xp-Kd0" secondAttribute="trailing" constant="1" id="EQ8-2L-cAd"/>
                 <constraint firstItem="NFB-Xp-Kd0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="1" id="Pqx-Mc-afi"/>
                 <constraint firstItem="NFB-Xp-Kd0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="jtR-XA-FVj"/>
                 <constraint firstAttribute="bottom" secondItem="NFB-Xp-Kd0" secondAttribute="bottom" constant="4" id="ugy-Nw-AlT"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="71" height="108"/>
+            <size key="customSize" width="131" height="182"/>
             <connections>
                 <outlet property="addPlus" destination="NRB-38-7qm" id="dcQ-cy-yek"/>
                 <outlet property="ivAddPlus" destination="1b9-HX-3kF" id="mS7-nS-e1s"/>
                 <outlet property="ivProfileImage" destination="mva-Ih-Nid" id="lCM-mn-TZa"/>
                 <outlet property="profileImage" destination="NFB-Xp-Kd0" id="VkI-hd-Dyr"/>
             </connections>
-            <point key="canvasLocation" x="60.14492753623189" y="101.11607142857143"/>
+            <point key="canvasLocation" x="-171.73913043478262" y="59.598214285714285"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="51Lzc4O-iuL" width="334" height="500"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
