- integrate network call list

--- a/ContactListView/ContactListView/Resource/Base.lproj/Main.storyboard
+++ b/ContactListView/ContactListView/Resource/Base.lproj/Main.storyboard
@@ -1288,22 +1288,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Z0-iH-fy3">
-                                <rect key="frame" x="186" y="437.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y9S-zX-THy">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UKi-gg-eXa"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2Z0-iH-fy3" firstAttribute="centerY" secondItem="J6K-pm-MRN" secondAttribute="centerY" id="RQ7-NV-ykx"/>
-                            <constraint firstItem="2Z0-iH-fy3" firstAttribute="centerX" secondItem="J6K-pm-MRN" secondAttribute="centerX" id="aWg-lX-pDu"/>
+                            <constraint firstItem="UKi-gg-eXa" firstAttribute="bottom" secondItem="y9S-zX-THy" secondAttribute="bottom" id="5XG-S4-efJ"/>
+                            <constraint firstItem="y9S-zX-THy" firstAttribute="leading" secondItem="UKi-gg-eXa" secondAttribute="leading" id="agV-nH-2fP"/>
+                            <constraint firstItem="y9S-zX-THy" firstAttribute="top" secondItem="UKi-gg-eXa" secondAttribute="top" id="b1J-ur-zMY"/>
+                            <constraint firstItem="UKi-gg-eXa" firstAttribute="trailing" secondItem="y9S-zX-THy" secondAttribute="trailing" id="d27-vw-wEE"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="lblUserEmail" destination="2Z0-iH-fy3" id="vpt-bf-sZQ"/>
+                        <outlet property="tableViewUserList" destination="y9S-zX-THy" id="oSA-vX-P5K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ybg-8C-UWu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
